# queryprocessor-csci403

./: README.md  album.py  album_artist.py  pyproject.toml
queryprocessor/: algebra.py  benchmark.py  operator.py  relation.py
